--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -1,4 +1,8 @@
   <div class="container">
+    <div class="text-center">
+      <h1><span class="text-animation">PhotoExhibition</span></h1><br>
+
+    </div>
     <div class="zoomIn"><a href="#"><span class="mask">
       <ul class="gallery">
         <% @exhibition.each do |exhibition|%>
