--- a/app/views/public/users/show.html.erb
+++ b/app/views/public/users/show.html.erb
@@ -16,6 +16,18 @@
           <h4><strong><i class="fa-solid fa-address-card"></i> Profile</strong></h4><br>
           <p><%= image_tag @user.get_profile_image(600, 600), class: "rounded-circle", size: "100x100" %></p>
           <p><i class="fa-solid fa-user"></i> <%= @user.nickname %></p>
+          <p><%= link_to user_followings_path(@user.id) do %>
+                <%= @user.followings.count %>
+              <% end %>フォロー中
+              <%= link_to user_followers_path(@user.id) do %>
+                <%= @user.followers.count %>
+              <% end %>フォロワー</p>
+          <p><% if current_user.following?(@user) %>
+              <%= link_to "フォロー外す", user_relationships_path(@user.id), method: :delete, class: "btn btn-info" %>
+            <% else %>
+              <%= link_to "フォローする", user_relationships_path(@user.id), method: :post, class: "btn btn-info"  %>
+            <% end %>
+          </p><br>
           <p><i class="fa-solid fa-comment"></i><br> <%= @user.profile %></p>
           <p><i class="fa-solid fa-arrow-up-right-from-square"></i><br> <%= @user.extemal_link %></p>
           <p><i class="fa-solid fa-camera-retro"></i> <%= link_to '展示作品', exhibitions_user_path(@user), class: "link" %></p>
