--- a/app/assets/stylesheets/public/users.scss
+++ b/app/assets/stylesheets/public/users.scss
@@ -121,3 +121,13 @@
 .slick-dots .slick-active button{
     background:#778899;/*ドットボタンの現在地表示の色*/
 }
+
+
+.edit-btn {
+ text-align: center;
+}
+
+.button-edit {
+  border: none;
+  background: none;
+}
