--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -44,11 +44,12 @@
     padding: 10px;
 }
 .center-ul {
+    width: 550px;
     display: flex;
-    justify-content: center;
-    text-align: center;
-    margin: 0;
-    padding: 0;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 30px;
+
 }
 
 .center-list {
@@ -182,6 +183,7 @@
 	cursor: pointer;
     width: 50px;
     height:50px;
+    margin-top: 25px;
 }
 
 /*×に変化*/
