--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -42,9 +42,11 @@
     border-left: 1px solid black;
     color: black;
     padding: 10px;
+    font-family: 'Pathway Gothic One', sans-serif;
+    font-style: italic;
 }
 .center-ul {
-    width: 550px;
+    width: 400px;
     display: flex;
     margin-left: auto;
     margin-right: auto;
@@ -57,6 +59,8 @@
     font-size: 20px;
     list-style-type: none;
     padding-right: 30px;
+    font-family: 'Pathway Gothic One', sans-serif;
+    font-style: italic;
 }
 .list-text {
     font-size: 12px;
@@ -255,16 +259,29 @@
 }
 
 
+// 下から出てくる
+.fadeUp{
+animation-name:fadeUpAnime;
+animation-duration:0.5s;
+animation-fill-mode:forwards;
+opacity:0;
+}
+
+@keyframes fadeUpAnime{
+  from {
+    opacity: 0;
+	transform: translateY(100px);
+  }
+
+  to {
+    opacity: 1;
+	transform: translateY(0);
+  }
+}
+
 // // フォント変更
 
-// @font-face {
-//     font-family: 'LibreBaskerville-Bold';
-//     src: font-url('/assets/LibreBaskerville-Bold.ttf');
-// }
-
-// .h4 {
-//     font-family: 'LibreBaskerville-Bold';
-//     font-size: 100px;
-//     line-height: 100px;
-//     color: black;
-// }
+h1 {
+  font-family: 'Pathway Gothic One', sans-serif;
+  font-style: italic;/*これが必要*/
+}
