--- a/app/views/public/categories/index.html.erb
+++ b/app/views/public/categories/index.html.erb
@@ -3,6 +3,11 @@
     <div class="row">
       <div class="col-11 col-md-8 col-lg-6 mx-auto">
         <h4 class="text-center"><strong>Exhibition</strong></h4>
+        <p class="text-center">PhotoExhibitionでは<br>
+                              「風景」「動物」「人物」「アート」の<br>
+                              4つのテーマに分けて公開しています。<br>
+                              ぜひギャラリーをご覧ください！
+        </p>
       </div>
     </div><br><br>
     <div class="text-center">
