--- a/app/views/public/categories/show.html.erb
+++ b/app/views/public/categories/show.html.erb
@@ -2,11 +2,9 @@
   <div class="container">
     <div class="row">
       <div class="col-11 col-md-8 col-lg-6 mx-auto">
-        <div class="card">
-          <div class="card-body text-center">
-            <h4><strong><%= @category.name %></strong></h4>
-          </div>
-        </div>
+        <div class="text-center">
+          <h4><strong><%= @category.name %></strong></h4>
+        </div><br>
       </div>
     </div><br><br>
     <div class="row">
