--- a/app/views/public/users/edit.html.erb
+++ b/app/views/public/users/edit.html.erb
@@ -1,10 +1,7 @@
-<div class=" d-flex align-items-center justify-content-center pt-5">
-  <div class="container">
-    <div class="row">
-      <div class="col-11 col-md-8 col-lg-6 mx-auto">
+      <div class="col-9 col-md-6 col-lg-4 mx-auto pt-5">
         <div class="card shadow">
-          <div class="card-body text-secondary">
-            <h1 class="text-center">会員情報変更</h1>
+          <div class="card-body mg-5">
+            <h2 class="text-center">会員情報変更</h2>
               <%= form_with model: @user do |f| %>
                 <p>名前</p>
                 <p><%= f.text_field :name, class: "form-control" %></p>
@@ -27,6 +24,4 @@
           </div>
         </div><br><br>
       </div>
-    </div>
-  </div>
-</div>
+
