--- a/app/views/public/users/show.html.erb
+++ b/app/views/public/users/show.html.erb
@@ -22,11 +22,13 @@
               <%= link_to user_followers_path(@user.id) do %>
                 <%= @user.followers.count %>
               <% end %>フォロワー</p>
+          <% unless @user == current_user %>　<!--自分のページには表示しない-->
           <p><% if current_user.following?(@user) %>
               <%= link_to "フォロー外す", user_relationships_path(@user.id), method: :delete, class: "btn btn-info" %>
             <% else %>
               <%= link_to "フォローする", user_relationships_path(@user.id), method: :post, class: "btn btn-info"  %>
             <% end %>
+          <% end %>
           </p><br>
           <p><i class="fa-solid fa-comment"></i><br> <%= @user.profile %></p>
           <p><i class="fa-solid fa-arrow-up-right-from-square"></i><br> <%= @user.extemal_link %></p>
