--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -52,7 +52,7 @@
                   <tr>
                     <td>
                       <div class="search-text">
-                       <%= f.search_field :title_cont,placeholder: 'テキストを入力', class: "form-control"%>
+                       <%= f.search_field :title_cont,placeholder: 'テキストを入力', class: "form-control",data: {"turbolinks"=>false} %>
                       </div>
                     </td>
                     <td><input class="search-btn" type="submit" value="検索"></td>
