--- a/app/views/public/exhibitions/search.html.erb
+++ b/app/views/public/exhibitions/search.html.erb
@@ -3,7 +3,7 @@
     <div class="row">
       <div class="col-11 col-md-8 col-lg-6 mx-auto">
         <div class="text-center">
-          <h1>Photo Gallery</h1>
+          <h4><i class="fa-solid fa-image"></i>「<%= params[:q][:title_cont] %>」のギャラリー</h4><br>
 
           <% @results.each do |exhibition| %>
             <%= link_to exhibition_path(exhibition.id) do %>
