--- a/app/views/public/users/show.html.erb
+++ b/app/views/public/users/show.html.erb
@@ -22,7 +22,7 @@
               <%= link_to user_followers_path(@user.id) do %>
                 <%= @user.followers.count %>
               <% end %>フォロワー</p>
-          <% unless @user == current_user %>　<!--自分のページには表示しない-->
+          <% unless @user == current_user %>　<!--自分のページには表示しない
           <p><% if current_user.following?(@user) %>
               <%= link_to "フォロー外す", user_relationships_path(@user.id), method: :delete, class: "btn btn-info" %>
             <% else %>
