--- a/app/views/public/categories/index.html.erb
+++ b/app/views/public/categories/index.html.erb
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="row">
       <div class="col-11 col-md-8 col-lg-6 mx-auto">
-        <h4 class="text-center"><strong>Exhibition</strong></h4>
+        <h4 class="text-center"><strong>Exhibition</strong></h4><br>
         <p class="text-center">PhotoExhibitionでは<br>
                               「風景」「動物」「人物」「アート」の<br>
                               4つのテーマに分けて公開しています。<br>
