--- a/app/views/public/categories/show.html.erb
+++ b/app/views/public/categories/show.html.erb
@@ -3,14 +3,14 @@
     <div class="row">
       <div class="col-11 col-md-8 col-lg-6 mx-auto">
         <div class="text-center">
-          <h4><strong><%= @category.name %></strong></h4>
+          <h4><strong>「<%= @category.name %>」</strong></h4>
         </div><br>
       </div>
     </div><br><br>
     <div class="row">
       <% @exhibitions.each do |exhibition| %>
         <% if @category.id == exhibition.category_id %>
-          <div class="col-lg-4">
+          <div class="col-lg-4 text-center">
             <%= link_to exhibition_path(exhibition.id), class: "link" do %>
               <%= image_tag exhibition.get_image(300,300) %><br><br>
               <div class="text-center">
