--- a/app/views/public/exhibitions/index.html.erb
+++ b/app/views/public/exhibitions/index.html.erb
@@ -3,7 +3,7 @@
     <div class="row">
       <div class="col-11 col-md-8 col-lg-6 mx-auto">
         <div class="text-center">
-          <h1>Photo Gallery</h1><br>
+          <h1><span class="bgextend bgLRextendTrigger"><span class="bgappearTrigger">Photo Gallery</span></span></h1><br>
         </div>
       </div>
     </div>
