--- a/app/views/public/homes/about.html.erb
+++ b/app/views/public/homes/about.html.erb
@@ -4,7 +4,7 @@
       <div class="col-11 col-md-8 col-lg-6 mx-auto">
         <div class="text-center">
           <h1>Photo Exhibition</h1><br>
-              <h4> <br>たくさんの写真との出会いを。</h4><br>
+              <h4><strong><span class="bgextend bgLRextendTrigger"><span class="bgappearTrigger">たくさんの写真との出会いを。</strong></span></span></h4><br>
               <p>誰もが気軽に自分の作品を展示でき<br>
                 多くの人の目に留まるような場所を作りたいと思い<br>
                 このサイトを作りました。<br>
