--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -1,8 +1,12 @@
 <div class=" d-flex align-items-center justify-content-center pt-5">
   <div class="container">
     <div class="text-center">
-      <h1><span>PhotoExhibition</span></h1><br>
+      <h1><span><i class="fa-solid fa-camera-retro"></i>PhotoExhibition</span></h1><br>
     </div>
+      <h5 class="text-center">人と人の繋がり、様々な作品と出会えるように<br><br>
+          PhotoExhibitionはオンラインの写真展です。<br>
+          ぜひ、たくさんの作品をご覧ください！</h5><br><br>
+
     <div class="zoomIn"><a href="#"><span class="mask">
       <ul class="gallery">
         <% @exhibition.each do |exhibition|%>
