--- a/app/views/public/users/index.html.erb
+++ b/app/views/public/users/index.html.erb
@@ -3,16 +3,16 @@
     <div class="row">
       <div class="col-11 col-md-8 col-lg-6 mx-auto">
         <div class="text-center">
-          <h4><strong>展示者一覧</strong></h4><br><br>
+          <h4><strong>exhibitors</strong></h4><br><br>
         </div>
       </div>
     </div>
     <div class="row">
       <% @users.each do |user| %>
-        <div class="col-lg-3">
+        <div class="col-lg-3 text-center">
           <div class="fadeUp">
             <%= image_tag user.get_profile_image(600, 600), class: "rounded-circle", size: "100x100" %>
-          </div>
+          </div><br>
           <div class="fadeUp">
             <%= link_to user_path(user.id), class: "link" do %>
               <%= user.name %><br><br>
