全ページインデント整理

--- a/app/views/public/registrations/new.html.erb
+++ b/app/views/public/registrations/new.html.erb
@@ -6,6 +6,7 @@
       <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
       <%= render "public/shared/error_messages", resource: resource %>
 
+      <!--新規登録に名前の入力欄-->
       <div class="field">
         <%= f.text_field :name, placeholder: "名前", class: "form-control" %>
       </div>
