--- a/app/views/public/relationships/followers.html.erb
+++ b/app/views/public/relationships/followers.html.erb
@@ -7,35 +7,35 @@
         </div>
       </div>
     </div>
-      <% if @users.exists? %>
-      <div class="fadeUp">
-        <% @users.each do |user| %>
-          <table align="center">
-            <thead>
-              <tr>
-                <th width="80"></th>
-                <th width="200"></th>
-                <th width="200"></th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr>
-                <td width="60"><%= image_tag user.get_profile_image(600, 600), class: "rounded-circle", size: "50x50" %></td>
-                <td><strong><%= user.nickname %></strong><br>
-                            <%= user.profile %></td>
-                <td><% if current_user.following?(user) %>
-                      <%= link_to "フォロー外す", user_relationships_path(user.id), method: :delete, class: "btn btn-info" %>
-                    <% else %>
-                      <%= link_to "フォローする", user_relationships_path(user.id), method: :post, class: "btn btn-info"  %>
-                    <% end %>
-                </td>
-              </tr>
-            </tbody>
-          </table>
-        <% end %>
-      <% else %>
-        <p>フォローされているユーザーはいません</p>
-        </div>
+    <% if @users.exists? %>
+    <div class="fadeUp">
+      <% @users.each do |user| %>
+        <table align="center">
+          <thead>
+            <tr>
+              <th width="80"></th>
+              <th width="200"></th>
+              <th width="200"></th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td width="60"><%= image_tag user.get_profile_image(600, 600), class: "rounded-circle", size: "50x50" %></td>
+              <td><strong><%= user.name %></strong><br>
+                          <%= user.profile %></td>
+              <td><% if current_user.following?(user) %>
+                    <%= link_to "フォロー外す", user_relationships_path(user.id), method: :delete, class: "btn btn-info" %>
+                  <% else %>
+                    <%= link_to "フォローする", user_relationships_path(user.id), method: :post, class: "btn btn-info"  %>
+                  <% end %>
+              </td>
+            </tr>
+          </tbody>
+        </table>
       <% end %>
+    <% else %>
+      <p>フォローされているユーザーはいません</p>
+      </div>
+    <% end %>
   </div>
 </div>
