--- a/app/views/public/users/show.html.erb
+++ b/app/views/public/users/show.html.erb
@@ -12,38 +12,38 @@
         </ul>
       </div>
 
-        <div class="col-4">
-          <h4><strong><i class="fa-solid fa-address-card"></i> Profile</strong></h4><br>
-          <p><%= image_tag @user.get_profile_image(600, 600), class: "rounded-circle", size: "100x100" %></p>
-          <p><i class="fa-solid fa-user"></i> <%= @user.nickname %></p>
-          <p><%= link_to user_followings_path(@user.id) do %>
-                <%= @user.followings.count %>
-              <% end %>フォロー中
-              <%= link_to user_followers_path(@user.id) do %>
-                <%= @user.followers.count %>
-              <% end %>フォロワー</p>
-          <% unless @user == current_user %>　<!--自分のページには表示しない-->
-          <p><% if current_user.following?(@user) %>
+      <div class="col-4">
+        <h4><strong><i class="fa-solid fa-address-card"></i> Profile</strong></h4><br>
+        <p><%= image_tag @user.get_profile_image(600, 600), class: "rounded-circle", size: "100x100" %></p>
+        <p><i class="fa-solid fa-user"></i> <%= @user.name %></p>
+        <p><%= link_to user_followings_path(@user.id) do %>
+              <%= @user.followings.count %>
+           <% end %>フォロー中
+           <%= link_to user_followers_path(@user.id) do %>
+              <%= @user.followers.count %>
+           <% end %>フォロワー</p>
+           <% unless @user == current_user %>　<!--自分のページには表示しない-->
+        <p><% if current_user.following?(@user) %>
               <%= link_to "フォロー外す", user_relationships_path(@user.id), method: :delete, class: "btn btn-info" %>
-            <% else %>
+           <% else %>
               <%= link_to "フォローする", user_relationships_path(@user.id), method: :post, class: "btn btn-info"  %>
-            <% end %>
-          <% end %>
-          </p><br>
-          <p><i class="fa-solid fa-comment"></i><br> <%= @user.profile %></p>
-          <p><i class="fa-solid fa-arrow-up-right-from-square"></i><br> <%= @user.extemal_link %></p>
-          <p><i class="fa-solid fa-camera-retro"></i> <%= link_to '展示作品', exhibitions_user_path(@user), class: "link" %></p>
-          <p><i class="fa-solid fa-heart"></i> <%= link_to 'いいねした作品', favorites_user_path(@user), class: "link" %></p>
+           <% end %>
+           <% end %>
+        </p><br>
+        <p><i class="fa-solid fa-comment"></i><br> <%= @user.profile %></p>
+        <p><i class="fa-solid fa-arrow-up-right-from-square"></i><br> <%= @user.extemal_link %></p>
+        <p><i class="fa-solid fa-camera-retro"></i> <%= link_to '展示作品', exhibitions_user_path(@user), class: "link" %></p>
+        <p><i class="fa-solid fa-heart"></i> <%= link_to 'いいねした作品', favorites_user_path(@user), class: "link" %></p>
 
-          <!--ログインユーザー以外は編集できないようにする-->
-          <% if @user == current_user %>
-            <p><%= link_to 'プロフィールを編集', edit_user_path(@user), class: "btn btn-outline-secondary" %>
-          <% end %>
-          <!--ゲストはプロフィール編集できないようにする-->
-          <% if @user.name != "guestuser" %>
-            <div class='row'>
-              <%= link_to '', edit_user_path(@user) %>
-          <% end %>
+        <!--ログインユーザー以外は編集できないようにする-->
+        <% if @user == current_user %>
+          <p><%= link_to 'プロフィールを編集', edit_user_path(@user), class: "btn btn-outline-secondary" %>
+        <% end %>
+        <!--ゲストはプロフィール編集できないようにする-->
+        <% if @user.name != "guestuser" %>
+          <div class='row'>
+            <%= link_to '', edit_user_path(@user) %>
+        <% end %>
       </div>
     </div>
   </div>
