--- a/app/views/public/exhibitions/edit.html.erb
+++ b/app/views/public/exhibitions/edit.html.erb
@@ -1,20 +1,14 @@
-<div class=" d-flex align-items-center justify-content-center pt-5">
-  <div class="container">
-    <div class="row">
-      <div class="col-11 col-md-8 col-lg-6 mx-auto">
-        <div class="card shadow">
-          <div class="card-body text-center">
-            <h1>編集画面</h1>
-            <%= form_with model: @exhibition do |f| %>
-              <p>タイトル</p>
-              <%= f.text_field :title %>
-              <p>紹介文</p>
-              <%= f.text_field :introduction %><br>
-              <%= f.submit '更新' %>
-            <% end %>
-          </div>
-        </div>
-      </div>
+<div class="col-9 col-md-6 col-lg-4 mx-auto pt-5">
+  <div class="card shadow">
+    <div class="card-body mg-5">
+      <h2 class="text-center">編集画面</h2><br>
+      <%= form_with model: @exhibition do |f| %>
+        <p>タイトル</p>
+        <p><%= f.text_field :title, class: "form-control" %></p>
+        <p>紹介文</p>
+        <p><%= f.text_field :introduction, class: "form-control" %></p><br>
+        <div class="text-center"><%= f.submit '更新する', class: "btn-form-blue" %></div><br>
+      <% end %>
     </div>
   </div>
 </div>
