--- a/app/views/public/exhibitions/show.html.erb
+++ b/app/views/public/exhibitions/show.html.erb
@@ -34,6 +34,19 @@
                 </div>
               </td>
             </tr>
+          </table><br>
+          <!--ログイン中のユーザーのみ編集と削除ができる-->
+          <table align="center">
+            <% if @exhibition.user == current_user %>
+            <tr>
+              <th></th>
+              <th></th>
+            </tr>
+            <tr>
+              <td><%= link_to "編集", edit_exhibition_path(@exhibition.id), class: "btn btn-outline-secondary" %></td>
+              <td><%= link_to "削除", exhibition_path(@exhibition.id), method: :delete, class: "btn btn-outline-secondary", data: {confirm: "本当に削除しますか？"} %></td>
+            </tr>
+            <% end %>
           </table>
         </div>
       </div>
