--- a/app/views/public/users/unsubscribe.html.erb
+++ b/app/views/public/users/unsubscribe.html.erb
@@ -1,19 +1,13 @@
-<div class=" d-flex align-items-center justify-content-center pt-5">
-  <div class="container">
-    <div class="row">
-      <div class="col-11 col-md-8 col-lg-6 mx-auto">
-        <div class="card shadow">
-          <div class="card-body text-center">
-            <i class="fa fa-exclamation-triangle fa-3x"></i>
-            <h4><strong>本当に退会しますか？</strong></h4><br>
-            <p>退会すると、会員登録情報や<br>
-                展示中の写真がサイトから消えてしまいます。<br>
-                退会する場合は「退会する」をクリックしてください。</p><br>
-            <%= link_to "マイページに戻る", user_path(current_user.id), class: "btn btn-outline-primary" %>
-            <%= link_to "退会する", users_withdraw_path, method: :patch, class: "btn btn-outline-danger" %>
-          </div>
-        </div>
-      </div>
+<div class="col-9 col-md-6 col-lg-4 mx-auto pt-5">
+  <div class="card shadow">
+    <div class="card-body text-center">
+      <i class="fa fa-exclamation-triangle fa-3x"></i>
+      <h4><strong>本当に退会しますか？</strong></h4><br>
+      <p>退会すると、会員登録情報や<br>
+          展示中の写真がサイトから消えてしまいます。<br>
+          退会する場合は「退会する」をクリックしてください。</p><br>
+      <%= link_to "マイページに戻る", user_path(current_user.id), class: "btn btn-outline-primary" %>
+      <%= link_to "退会する", users_withdraw_path, method: :patch, class: "btn btn-outline-danger" %>
     </div>
   </div>
 </div>
