--- a/app/views/public/relationships/followers.html.erb
+++ b/app/views/public/relationships/followers.html.erb
@@ -23,10 +23,14 @@
               <td width="60"><%= image_tag user.get_profile_image(600, 600), class: "rounded-circle", size: "50x50" %></td>
               <td><strong><%= user.name %></strong><br>
                           <%= user.profile %></td>
-              <td><% if current_user.following?(user) %>
-                    <%= link_to "フォロー外す", user_relationships_path(user.id), method: :delete, class: "btn btn-info" %>
-                  <% else %>
-                    <%= link_to "フォローする", user_relationships_path(user.id), method: :post, class: "btn btn-info"  %>
+                    
+                  <!--自分はフォローできないようにする-->
+              <td><% unless user == current_user %>
+                    <% if current_user.following?(user) %>
+                      <%= link_to "フォロー外す", user_relationships_path(user.id), method: :delete, class: "btn btn-info" %>
+                    <% else %>
+                      <%= link_to "フォローする", user_relationships_path(user.id), method: :post, class: "btn btn-info"  %>
+                    <% end %>
                   <% end %>
               </td>
             </tr>
