--- a/app/views/public/users/show.html.erb
+++ b/app/views/public/users/show.html.erb
@@ -26,14 +26,12 @@
            <%= link_to user_followers_path(@user.id) do %>
               <%= @user.followers.count %>
            <% end %>フォロワー</p>
-           <% unless @user == current_user %>　<!--自分のページには表示しない-->
-        <p><% if current_user.following?(@user) %>
-              <%= link_to "フォロー外す", user_relationships_path(@user.id), method: :delete, class: "btn btn-info" %>
-           <% else %>
-              <%= link_to "フォローする", user_relationships_path(@user.id), method: :post, class: "btn btn-info"  %>
-           <% end %>
-           <% end %>
-        </p><br>
+
+           <!--フォロー機能の部分テンプレート-->
+            <div id="follow_btn_<%= @user.id %>">
+              <%= render "public/follow/follow", user: @user %>
+            </div>
+
         <p><i class="fa-solid fa-comment"></i><br> <%= @user.profile %></p>
         <p><i class="fa-solid fa-arrow-up-right-from-square"></i><br> <%= @user.extemal_link %></p>
         <p><i class="fa-solid fa-camera-retro"></i> <%= link_to '展示作品', exhibitions_user_path(@user), class: "link" %></p>
