--- a/app/views/public/follow/_follow.html.erb
+++ b/app/views/public/follow/_follow.html.erb
@@ -1,4 +1,11 @@
 <!--フォロー機能実装-->
+<%= link_to user_followings_path(user.id) do %>
+  <%= user.followings.count %>
+<% end %>フォロー中
+<%= link_to user_followers_path(user.id) do %>
+  <%= user.followers.count %>
+<% end %>フォロワー<br>
+
 <% unless user == current_user %>　<!--自分のページには表示しない-->
   <p><% if current_user.following?(user) %>
       <%= link_to "フォロー外す", user_relationships_path(user.id), method: :delete, remote: true, class: "btn btn-info" %>
