フォローフォロワーいいね一覧微調整

--- a/app/views/public/relationships/followers.html.erb
+++ b/app/views/public/relationships/followers.html.erb
@@ -40,7 +40,7 @@
         </table>
       <% end %>
     <% else %>
-      <p>フォローされているユーザーはいません</p>
+      <p class=text-center>フォローされているユーザーはいません</p>
       </div>
     <% end %>
   </div>
