--- a/app/views/public/relationships/followings.html.erb
+++ b/app/views/public/relationships/followings.html.erb
@@ -40,7 +40,7 @@
         </table>
       <% end %>
       <% else %>
-        <p>フォローしているユーザーはいません</p>
+        <p class=text-center>フォローしているユーザーはいません</p>
     </div>
       <% end %>
   </div>
