カテゴリー詳細レイアウト微調整

--- a/app/views/public/categories/show.html.erb
+++ b/app/views/public/categories/show.html.erb
@@ -14,7 +14,7 @@
             <%= link_to exhibition_path(exhibition.id), class: "link" do %>
               <%= image_tag exhibition.get_image(300,300) %><br><br>
               <div class="text-center">
-                <%= exhibition.title %><br><br>
+                「<%= exhibition.title %>」<br><br>
               </div>
             <% end %>
           </div>
