アカウントの公開・非公開設定導入

--- a/app/views/public/users/show.html.erb
+++ b/app/views/public/users/show.html.erb
@@ -31,9 +31,16 @@
         <p><i class="fa-solid fa-camera-retro"></i> <%= link_to '展示作品', exhibitions_user_path(@user), class: "link" %></p>
         <p><i class="fa-solid fa-heart"></i> <%= link_to 'いいねした作品', favorites_user_path(@user), class: "link" %></p>
 
-        <!--ログインユーザー以外は編集できないようにする-->
+        <!--ログインユーザー以外は編集・公開非公開にできないようにする-->
         <% if @user == current_user %>
           <p><%= link_to 'プロフィールを編集', edit_user_path(@user), class: "btn btn-outline-secondary" %>
+          <p><i class="fa-solid fa-key"></i>アカウントの公開設定
+            <% if @user.released? %>
+              <%= link_to ' 非公開にする', users_nonrelease_path(@user), method: :patch%>
+            <% else %>
+              <%= link_to '公開する', users_release_path(@user), method: :patch%>
+            <% end %>
+          </p>
         <% end %>
         <!--ゲストはプロフィール編集できないようにする-->
         <% if @user.name != "guestuser" %>
