--- a/app/views/public/users/edit.html.erb
+++ b/app/views/public/users/edit.html.erb
@@ -12,7 +12,7 @@
           <p>プロフィール</p>
           <p><%= f.text_area :profile, class: "form-control" %></p>
           <p>外部リンク</p>
-          <p><%= f.text_field :extemal_link, class: "form-control"%></p>
+          <p><%= f.text_field :extemal_link, class: "form-control"%></p><br>
           <div class="text-center"><%= f.submit '変更を保存', class: "btn-form-blue" %></div>
         <% end %>
         <div class="edit-btn">
