--- a/app/views/admin/users/show.html.erb
+++ b/app/views/admin/users/show.html.erb
@@ -32,7 +32,7 @@
               <span class="text-success"><strong>有効</strong></span>
             <% else %>
               <span class="text-secondary"><strong>退会</strong></span>
-            <% end %></p>
+            <% end %>
           </td>
         </tr>
       </table>
