投稿一覧ページに投稿ボタン追加

--- a/app/views/public/users/exhibitions.html.erb
+++ b/app/views/public/users/exhibitions.html.erb
@@ -3,7 +3,23 @@
     <div class="row">
       <div class="col-11 col-md-8 col-lg-6 mx-auto">
         <div class="text-center">
-          <h1>Photo Gallery</h1><br>
+          <tabele>
+            <tr>
+              <th></th>
+              <th></th>
+            </tr>
+            <tr>
+              <td>
+                <h1>Photo Gallery
+              </td>
+              <td>
+                <%= link_to new_exhibition_path do %>
+                  <i class="fa-sharp fa-solid fa-circle-plus" style="color: dimgray;"></i>
+                <% end %></h1>
+              </td>
+            </tr>
+          </tabele>
+
         </div>
       </div>
     </div>
