--- a/app/views/public/users/show.html.erb
+++ b/app/views/public/users/show.html.erb
@@ -34,13 +34,13 @@
         <!--ログインユーザー以外は編集・公開非公開にできないようにする-->
         <% if @user == current_user %>
           <p><%= link_to 'プロフィールを編集', edit_user_path(@user), class: "btn btn-outline-secondary" %>
-          <p><i class="fa-solid fa-key"></i>アカウントの公開設定
-            <% if @user.released? %>
-              <%= link_to ' 非公開にする', users_nonrelease_path(@user), method: :patch%>
-            <% else %>
-              <%= link_to '公開する', users_release_path(@user), method: :patch%>
-            <% end %>
-          </p>
+          <!--<p><i class="fa-solid fa-key"></i>アカウントの公開設定-->
+          <!--  <%# if @user.released? %>-->
+          <!--    <%#= link_to ' 非公開にする', users_nonrelease_path(@user), method: :patch%>-->
+          <!--  <%# else %>-->
+          <!--    <%#= link_to '公開する', users_release_path(@user), method: :patch%>-->
+          <!--  <%# end %>-->
+          <!--</p>-->
         <% end %>
         <!--ゲストはプロフィール編集できないようにする-->
         <% if @user.name != "guestuser" %>
