--- a/app/views/public/users/edit.html.erb
+++ b/app/views/public/users/edit.html.erb
@@ -11,6 +11,8 @@
           <p><%= f.file_field :profile_image, placeholder: "プロフィール画像", accept: "image/*" %></p>
           <p>プロフィール</p>
           <p><%= f.text_area :profile, class: "form-control" %></p>
+          
+          <!--twitterやinstagramなどの別サイトのリンクを表示-->
           <p>外部リンク</p>
           <p><%= f.text_field :extemal_link, class: "form-control"%></p><br>
           <div class="text-center"><%= f.submit '変更を保存', class: "btn-form-blue" %></div>
