--- a/app/views/public/exhibitions/new.html.erb
+++ b/app/views/public/exhibitions/new.html.erb
@@ -16,7 +16,7 @@
         <%= f.file_field :image, accept: "image/*"%><br><br><br>
         <%= f.text_field :title, placeholder: "タイトル", class: "form-control" %>
         <%= f.text_area :introduction, placeholder: "キャプション", class: "form-control" %><br>
-        <%= f.collection_select :category_id, @categories, :id, :name, {prompt: "カテゴリー選択"}, {class: "form-control input-sm"} %><br><br>
+        <%= f.collection_select :category_id, Category.all, :id, :name, {prompt: "カテゴリー選択"}, {class: "form-control input-sm"} %><br><br>
         <input class="btn-form-gray" type="submit" value="展示する"></p><br>
       <% end %>
     </div>
