--- a/app/views/public/exhibitions/search.html.erb
+++ b/app/views/public/exhibitions/search.html.erb
@@ -3,6 +3,11 @@
     <div class="row">
       <div class="col-11 col-md-8 col-lg-6 mx-auto">
         <div class="text-center">
+          <%= search_form_for @q, url: search_exhibitions_path do |f| %>
+            <%= f.search_field :title_cont, placeholder: 'テキストを入力', class: "form-control" %>
+            <input class="search-btn" type="submit" value="検索">
+          <% end %>
+
           <h4><i class="fa-solid fa-image"></i>「<%= params[:q][:title_cont] %>」のギャラリー</h4><br>
           <% @results.each do |exhibition| %>
             <%= link_to exhibition_path(exhibition.id), class: "link" do %>
