--- a/app/views/public/exhibitions/search.html.erb
+++ b/app/views/public/exhibitions/search.html.erb
@@ -3,12 +3,28 @@
     <div class="row">
       <div class="col-11 col-md-8 col-lg-6 mx-auto">
         <div class="text-center">
-          <%= search_form_for @q, url: search_exhibitions_path do |f| %>
-            <%= f.search_field :title_cont, placeholder: 'テキストを入力', class: "form-control" %>
-            <input class="search-btn" type="submit" value="検索">
-          <% end %>
+          <table>
+            <%= search_form_for @q, url: search_exhibitions_path do |f| %>
+              <tr>
+                <th></th>
+                <th></th>
+                <th></th>
+              </tr>
+              <tr>
+                <td width="200"><タイトルを検索></td>
+                <td width="200"><%= f.search_field :title_cont, placeholder: 'テキストを入力', class: "form-control" %></td>
+                <td><input class="search-btn" type="submit" value="検索"></td>
+              </tr>
+              <tr>
+                <td width="200"><キャプションを検索></td>
+                <td width="200"><%= f.search_field :introduction_cont, placeholder: 'テキストを入力', class: "form-control" %></td>
+                <td><input class="search-btn" type="submit" value="検索"></td>
+              </tr>
+            <% end %>
+          </table><br><br>
 
-          <h4><i class="fa-solid fa-image"></i>「<%= params[:q][:title_cont] %>」のギャラリー</h4><br>
+          <!--<h4><i class="fa-solid fa-image"></i>「<%#= params[:q][:title_cont] %>」のギャラリー</h4><br>-->
+          <h4><i class="fa-solid fa-image"></i>検索結果</h4><br>
           <% @results.each do |exhibition| %>
             <%= link_to exhibition_path(exhibition.id), class: "link" do %>
               <%= image_tag exhibition.get_image(300,300) %><br><br>
