デプロイ準備

--- a/app/views/public/exhibitions/search.html.erb
+++ b/app/views/public/exhibitions/search.html.erb
@@ -15,11 +15,11 @@
                 <td width="200"><%= f.search_field :title_cont, placeholder: 'テキストを入力', class: "form-control" %></td>
                 <td><input class="search-btn" type="submit" value="検索"></td>
               </tr>
-              <tr>
-                <td width="200"><キャプションを検索></td>
-                <td width="200"><%= f.search_field :introduction_cont, placeholder: 'テキストを入力', class: "form-control" %></td>
-                <td><input class="search-btn" type="submit" value="検索"></td>
-              </tr>
+              <!--<tr>-->
+              <!--  <td width="200"><キャプションを検索></td>-->
+              <!--  <td width="200"><%#= f.search_field :introduction_cont, placeholder: 'テキストを入力', class: "form-control" %></td>-->
+              <!--  <td><input class="search-btn" type="submit" value="検索"></td>-->
+              <!--</tr>-->
             <% end %>
           </table><br><br>
 
