--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -77,7 +77,7 @@
       <% elsif admin_signed_in? %>
         <ul class="center-ul">
           <li class="center-list">
-            <%= link_to "user", admin_users_path, class: "header-link" %>
+            <%= link_to "users", admin_users_path, class: "header-link" %>
           </li>
           <li class="center-list">
             <%= link_to "category", admin_categories_path, class: "header-link" %>
